@@ -38,7 +38,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import org.hisp.dhis.common.UID;
 import org.hisp.dhis.tracker.TrackerType;
 import org.hisp.dhis.tracker.imports.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.imports.TrackerImportStrategy;
@@ -106,10 +106,12 @@ class AllTest {
 
   @Test
   void testAllDoesNotCallValidatorIfItShouldNotRunOnGivenStrategyForATrackerDto() {
+    UID uid = UID.generate();
     bundle =
         TrackerBundle.builder()
             .importStrategy(CREATE_AND_UPDATE)
-            .resolvedStrategyMap(new EnumMap<>(Map.of(TrackerType.EVENT, Map.of("event1", UPDATE))))
+            .resolvedStrategyMap(
+                new EnumMap<>(Map.of(TrackerType.EVENT, Map.of(uid.getValue(), UPDATE))))
             .build();
 
     Validator<Event> validator =
@@ -137,7 +139,7 @@ class AllTest {
               }
             });
 
-    validator.validate(reporter, bundle, Event.builder().event("event1").build());
+    validator.validate(reporter, bundle, Event.builder().event(uid).build());
 
     assertContainsOnly(List.of("V2"), actualErrorMessages());
   }
@@ -153,6 +155,6 @@ class AllTest {
   }
 
   private List<String> actualErrorMessages() {
-    return reporter.getErrors().stream().map(Error::getMessage).collect(Collectors.toList());
+    return reporter.getErrors().stream().map(Error::getMessage).toList();
   }
 }
