@@ -37,7 +37,6 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.hisp.dhis.common.AccessLevel;
 import org.hisp.dhis.common.CodeGenerator;
 import org.hisp.dhis.common.IdentifiableObjectManager;
@@ -244,13 +243,12 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     relationship(teA, inaccessibleTe, teToInaccessibleTeType);
 
     RelationshipOperationParams operationParams =
-        RelationshipOperationParams.builder().type(TRACKED_ENTITY).identifier(teA.getUid()).build();
+        RelationshipOperationParams.builder().type(TRACKED_ENTITY).identifier(teA).build();
 
     List<Relationship> relationships = relationshipService.getRelationships(operationParams);
 
     assertContainsOnly(
-        List.of(accessible.getUid()),
-        relationships.stream().map(Relationship::getUid).collect(Collectors.toList()));
+        List.of(accessible.getUid()), relationships.stream().map(Relationship::getUid).toList());
   }
 
   @Test
@@ -260,16 +258,12 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     relationship(teB, enrollmentA, teToInaccessibleEnType);
 
     RelationshipOperationParams operationParams =
-        RelationshipOperationParams.builder()
-            .type(ENROLLMENT)
-            .identifier(enrollmentA.getUid())
-            .build();
+        RelationshipOperationParams.builder().type(ENROLLMENT).identifier(enrollmentA).build();
 
     List<Relationship> relationships = relationshipService.getRelationships(operationParams);
 
     assertContainsOnly(
-        List.of(accessible.getUid()),
-        relationships.stream().map(Relationship::getUid).collect(Collectors.toList()));
+        List.of(accessible.getUid()), relationships.stream().map(Relationship::getUid).toList());
   }
 
   @Test
@@ -279,13 +273,12 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     relationship(eventA, inaccessibleEvent);
 
     RelationshipOperationParams operationParams =
-        RelationshipOperationParams.builder().type(EVENT).identifier(eventA.getUid()).build();
+        RelationshipOperationParams.builder().type(EVENT).identifier(eventA).build();
 
     List<Relationship> relationships = relationshipService.getRelationships(operationParams);
 
     assertContainsOnly(
-        List.of(accessible.getUid()),
-        relationships.stream().map(Relationship::getUid).collect(Collectors.toList()));
+        List.of(accessible.getUid()), relationships.stream().map(Relationship::getUid).toList());
   }
 
   @Test
@@ -324,7 +317,7 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     RelationshipOperationParams operationParams =
         RelationshipOperationParams.builder()
             .type(TRACKED_ENTITY)
-            .identifier(trackedEntityFrom.getUid())
+            .identifier(trackedEntityFrom)
             .build();
 
     assertThrows(
@@ -361,14 +354,13 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     RelationshipOperationParams operationParams =
         RelationshipOperationParams.builder()
             .type(TRACKED_ENTITY)
-            .identifier(trackedEntityFrom.getUid())
+            .identifier(trackedEntityFrom)
             .build();
 
     List<Relationship> relationships = relationshipService.getRelationships(operationParams);
 
     assertContainsOnly(
-        List.of(accessible.getUid()),
-        relationships.stream().map(Relationship::getUid).collect(Collectors.toList()));
+        List.of(accessible.getUid()), relationships.stream().map(Relationship::getUid).toList());
   }
 
   @Test
@@ -402,7 +394,7 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     RelationshipOperationParams operationParams =
         RelationshipOperationParams.builder()
             .type(TRACKED_ENTITY)
-            .identifier(trackedEntityFrom.getUid())
+            .identifier(trackedEntityFrom)
             .build();
 
     assertThrows(
@@ -441,7 +433,7 @@ class RelationshipServiceTest extends PostgresIntegrationTestBase {
     RelationshipOperationParams operationParams =
         RelationshipOperationParams.builder()
             .type(TRACKED_ENTITY)
-            .identifier(trackedEntityFrom.getUid())
+            .identifier(trackedEntityFrom)
             .build();
 
     assertThrows(
